# delta-neutral-bot

./: .gitignore
bots/extended/: main.py  pyproject.toml
bots/extended/src/: config.py
bots/extended/src/application/ports/: stream_port.py
bots/extended/src/application/services/: market_service.py
bots/extended/src/domain/: exceptions.py  order_book.py
bots/extended/src/infrastructure/: logging.py
bots/extended/src/infrastructure/extended/: stream_adapter.py
bots/extended/tests/: verify_logging.py
bots/extended/tests/unit/: test_market_service.py  test_stream_adapter.py
